--- a/src/css/figures.css
+++ b/src/css/figures.css
@@ -1,75 +1,7 @@
-
-.timeline > li {
-  overflow: hidden;
-  margin: 0;
-  position: relative;
-}
-
-.timeline-date {
-  width: 110px;
-  float: left;
-  margin-top: 20px;
-}
-.timeline-content {
-  width: 75%;
-  float: left;
-  border-left: 3px #e5e5d1 solid;
-  padding-left: 30px;
-}
-
-.timeline-content {
-  width: 75%;
-  float: left;
-  border-left: 3px #e5e5d1 solid;
-  padding-left: 30px;
-}
-
-.U1 {
-  width: 75%;
-  float: left;
-  border-left: 3px #e5e5d1 solid;
-  padding-left: 30px;
-}
-
-.Change {
-  width: 75%;
-  float: left;
-  border-left: 3px #e5e5d1 solid;
-  padding-left: 30px;
-}
-
-
-
-
-.timeline-content:before {
-  content: '';
-  width: 12px;
-  height: 12px;
-  background: #6fc173;
-  position: absolute;
-  left: 106px;
-  top: 24px;
-  border-radius: 100%;
-}
-
-.U1:before {
-  content: '';
-  width: 12px;
-  height: 12px;
-  background: #FF0000;
-  position: absolute;
-  left: 106px;
-  top: 24px;
-  border-radius: 100%;
-}
-
-.Change:before {
-  content: '';
-  width: 12px;
-  height: 12px;
-  background: #FF0000;
-  position: absolute;
-  left: 106px;
-  top: 24px;
-  border-radius: 100%;
+.full-circle {
+ background-color: #FF0000;
+ height: 20px;
+ -moz-border-radius:10px;
+ -webkit-border-radius: 10px;
+ width: 20px;
 }
